...

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/prenomEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/telEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/courrielEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/mdpEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/adresseEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/cpEditText"
                android:layout_width="100dp"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/villeEditText"
                android:layout_width="100dp"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/provinceEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

            <EditText
                android:id="@+id/indicationEditText"
                android:layout_width="@dimen/width_EditTextComponents"
                android:layout_height="@dimen/height_Components"
...

                <EditText
                    android:id="@+id/numCBEditText"
                    android:layout_width="@dimen/width_EditTextComponents"
                    android:layout_height="@dimen/height_Components"
...

                <EditText
                    android:id="@+id/titulaireEditText"
                    android:layout_width="@dimen/width_EditTextComponents"
                    android:layout_height="@dimen/height_Components"
...

                <EditText
                    android:id="@+id/moisExpirationEditText"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/height_Components"
...

                <EditText
                    android:id="@+id/anneeExpirationEditText"
                    android:layout_width="80dp"
                    android:layout_height="@dimen/height_Components"
...

                <EditText
                    android:id="@+id/cryptogrammeEditText"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/height_Components"
...
        <!--Bouton ajout d'un moyen de paiement-->
        <Button
            android:id="@+id/ajoutMoyenPaiementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        <!--Bouton ajout d'une adresse Favorite-->
        <Button
            android:id="@+id/ajoutAdresseFavoriteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
