...
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                />

            <EditText
                android:id="@+id/nomEditText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="Nom"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textSize="15sp"
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/validerLivraisonButton"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_valider"
                android:textColor="#FFFFFF"
...
