<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.usherbrooke.deliverresto.PanierActivity"
    tools:showIn="@layout/activity_panier"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listViewPanier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/aucun_current_panier"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="Aucun article dans le panier" />

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >


        <Button
            android:id="@+id/commanderButton"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:background="@drawable/btn_valider"
            android:textColor="#FFFFFF"
            android:text="Commander" />

    </RelativeLayout>


</RelativeLayout>

