...
                android:textAlignment="center"
                android:textSize="25dp"
                android:textColor="#1FA055"
                android:text="Commande envoyée"/>

            <Button
                android:id="@+id/finalOKButton"
                android:layout_width="150dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_valider"
                android:textColor="#FFFFFF"
...
