...


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/inscriptionButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="S'inscrire"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/cardViewAccueil"
        android:background="@drawable/btn_background"
...
