...
            android:layout_below="@id/provinceTextView"
            />
    </RelativeLayout>

    <!--Bouton Enregistrer adresse-->
    <Button
        android:id="@+id/enregistrerAdresseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Enregistrer l'Adresse"
        android:background="@drawable/btn_background"
        android:layout_centerHorizontal="true"
...
